Before running debugger, check if application is indeed executable.

BUG: 72547